--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   readmore: ^2.2.0
   step_progress_indicator: ^1.0.2
   flutter_switch: ^0.3.2
+  flutter_native_splash: ^2.2.15
+
 
 
 dev_dependencies:
@@ -59,7 +61,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-
+flutter_native_splash:
+  # background_image: "./web/imagens/background.png"
+  color: "#EA5B0C"
+  image: web/imagens/splash.png
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
