--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   cached_network_image: ^3.2.3
   geolocator: ^9.0.2
   intl: ^0.17.0
+  google_maps_flutter: ^2.0.6
+  google_maps_flutter_web: ^0.3.0+3
 
 
 
