--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   google_maps_flutter: ^2.0.6
   google_maps_flutter_web: ^0.3.0+3
   url_strategy: ^0.2.0
+  adaptive_action_sheet: ^2.0.2
 
 
 
