--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   url_strategy: ^0.2.0
   adaptive_action_sheet: ^2.0.2  
   location: ^4.4.0
+  fluttertoast: ^8.1.2
 
 dev_dependencies:
   flutter_test:
