--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: Cultura.ce
+name: agendacultural
 description: Agenda Cultural
 
 # The following line prevents the package from being accidentally published to
