--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,10 +1,10 @@
 {
-    "name": "agendacultural",
-    "short_name": "agendacultural",
+    "name": "Cultura.CE",
+    "short_name": "Cultura.CE",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#ff3300",
-    "theme_color": "#ff3300",
+    "background_color": "#FFE83C3B",
+    "theme_color": "#FFE83C3B",
     "description": "Cultura.ce",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
