--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   persistent_bottom_nav_bar: ^5.0.2
   geocoder2: ^1.4.0
   flutter_launcher_icons: ^0.11.0
+  dropdown_button2: ^1.9.2
+  dart_date: ^1.1.1
+  menu_button: ^1.4.2+1
 
 dev_dependencies:
 
