--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter_localizations: # Add this line
-    sdk: flutter   
   flutter:
     sdk: flutter
+  flutter_localizations: # Add this line
+    sdk: flutter   
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -41,8 +42,8 @@ dependencies:
   shared_preferences: ^2.0.15
   http: ^0.13.5
   provider: ^6.0.4
-  date_format: ^2.0.7
-  date_field: ^3.0.1
+  #date_format: ^2.0.7
+  #date_field: ^3.0.1
   google_fonts: ^3.0.1
   introduction_screen: ^3.0.2
   awesome_dialog: ^3.0.2
