--- a/web/manifest.json
+++ b/web/manifest.json
@@ -2,9 +2,9 @@
     "name": "Cultura.CE",
     "short_name": "Cultura.CE",
     "start_url": ".",
-    "display": "standalone",
-    "background_color": "#FFE83C3B",
-    "theme_color": "#FFE83C3B",
+    "display": "fullscreen",
+    "background_color": "transparent",
+    "theme_color": "transparent", 
     "description": "Cultura.ce",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
