--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   dart_date: ^1.1.1
   menu_button: ^1.4.2+1
   flutter_native_splash: ^2.2.13
+  flutter_easyloading: 3.0.5
 
 dev_dependencies:
 
