--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   provider: ^6.0.4
   #date_format: ^2.0.7
   #date_field: ^3.0.1
-  google_fonts: ^3.0.1
+  google_fonts: ^4.0.1
   introduction_screen: ^3.0.2
   awesome_dialog: ^3.0.2
   readmore: ^2.2.0
@@ -53,8 +53,8 @@ dependencies:
   platform_info: ^3.2.0
   #cached_network_image: ^3.2.3  
   intl: ^0.17.0
-  google_maps_flutter: ^2.0.6
-  google_maps_flutter_web: ^0.3.0+3
+  google_maps_flutter: ^2.2.3
+  google_maps_flutter_web: ^0.4.0+5
   url_strategy: ^0.2.0
   adaptive_action_sheet: ^2.0.2  
   location: ^4.4.0
@@ -66,12 +66,12 @@ dependencies:
   dropdown_button2: ^1.9.2
   dart_date: ^1.1.1
   menu_button: ^1.4.2+1
-  flutter_native_splash: ^2.2.13
+  flutter_native_splash: ^2.2.17
   flutter_easyloading: 3.0.5
 
 dev_dependencies:
 
-  flutter_launcher_icons: ^0.11.0
+  #flutter_launcher_icons: ^0.11.0
 
   flutter_test:
     sdk: flutter
