--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dependencies:
   step_progress_indicator: ^1.0.2
   flutter_switch: ^0.3.2
   platform_info: ^3.2.0
-  #cached_network_image: ^3.2.3  
+  group_button: ^5.2.2
   intl: ^0.17.0
   google_maps_flutter: ^2.2.3
   google_maps_flutter_web: ^0.4.0+5
@@ -62,8 +62,7 @@ dependencies:
   url_launcher: ^6.1.7
   persistent_bottom_nav_bar: ^5.0.2
   geocoder2: ^1.4.0
-  
-  dropdown_button2: ^1.9.2
+  dropdown_search: 5.0.2  
   dart_date: ^1.1.1
   menu_button: ^1.4.2+1
   flutter_native_splash: ^2.2.17
