💄 feat: Últimos ajustes na tela de detalhes do espaço

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,10 +4,10 @@
         android:name="${applicationName}"
         android:enableOnBackInvokedCallback="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="agendacultural_app">
+        android:label="Agenda Cultural">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBHnw0ov66Rh1UCjnK3pfuh5Y-yoG44FTg" />
+            android:value="AIzaSyD6N1Bi7N9NkV8VtpbI4L5aB6wDwxm82vA" />
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
@@ -35,4 +35,7 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 </manifest>
