--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   group_button: ^5.2.2
   intl: ^0.18.1
   google_maps_flutter: ^2.5.3
+  google_maps_flutter_android: ^2.8.0
+  google_maps_flutter_platform_interface: ^2.6.0
   url_strategy: ^0.2.0
   adaptive_action_sheet: ^2.0.2
   fluttertoast: ^8.1.2
