--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,12 +44,15 @@ dependencies:
   flutter_easyloading: 3.0.5
   uuid: ^4.3.3
   flutter_svg: ^2.0.9
+  mobx: ^2.2.0
+  flutter_mobx: ^2.2.1+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^2.0.0
+  mobx_codegen: ^2.6.1
+  build_runner: ^2.4.6
 
 flutter_icons:
   android: "launcher_icon"
