--- a/l10n.yaml
+++ b/l10n.yaml
@@ -1,3 +1,3 @@
-arb-dir: lib/l10n
+arb-dir: lib/app/common/utils/l10n
 template-arb-file: app_pt.arb
 output-localization-file: app_localizations.dart
