--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,20 +25,21 @@ dependencies:
   flutter_switch: ^0.3.2
   platform_info: ^3.2.0
   group_button: ^5.2.2
-  intl: ^0.18.1
-  google_maps_flutter: ^2.5.3
-  google_maps_flutter_android: ^2.8.0
-  google_maps_flutter_platform_interface: ^2.6.0
+  intl: 0.19.0
+  google_maps_flutter: ^2.9.0
+  #google_maps_flutter_android: ^2.8.0
+  #google_maps_flutter_platform_interface: ^2.6.0
   adaptive_action_sheet: ^2.0.2
   fluttertoast: ^8.1.2
   url_launcher: ^6.1.7
+  url_launcher_ios: ^6.1.7
   persistent_bottom_nav_bar: ^5.0.2
   geocoder2: ^1.4.0
   geolocator: ^7.0.1
   permission_handler: ^11.3.1
-  dropdown_search: 5.0.2
+  dropdown_search: 6.0.1
   dart_date: ^1.1.1
-  menu_button: ^1.4.2+1
+  #menu_button: ^1.4.2+1
   flutter_native_splash: ^2.2.17
   flutter_easyloading: 3.0.5
   uuid: ^4.3.3
