--- a/.gitignore
+++ b/.gitignore
@@ -38,9 +38,9 @@ app.*.symbols
 app.*.map.json
 
 # Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+/androidd/app/debug
+/androidd/app/profile
+/androidd/app/release
 
 # FVM Version Cache
 .fvm/
