--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   mobx: ^2.2.0
   flutter_mobx: ^2.2.1+1
   flutter_modular: ^6.0.4+1
+  geocoding: ^3.0.0
 
 dev_dependencies:
   flutter_test:
