--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,43 +14,35 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
-  shared_preferences: ^2.0.15
-  http: ^0.13.4
-  provider: ^6.0.4
+  shared_preferences: ^2.5.2
+  http: ^1.3.0
+  provider: ^6.1.2
   google_fonts: ^4.0.1
-  awesome_dialog: ^3.0.2
+  awesome_dialog: ^3.2.1
   readmore: ^3.0.0
   step_progress_indicator: ^1.0.2
   flutter_switch: ^0.3.2
-  platform_info: ^5.0.0
-  group_button: ^5.2.2
-  intl: 0.19.0
-  google_maps_flutter: ^2.9.0
-  adaptive_action_sheet: ^2.0.2
-  url_launcher: ^6.1.7
-  url_launcher_ios: ^6.1.7
-  persistent_bottom_nav_bar: ^6.2.1
-  geocoder2: ^1.4.0
+  group_button: ^5.3.4
+  intl: 0.19.0 # dart_date depends this
+  google_maps_flutter: ^2.10.1
+  url_launcher: ^6.3.1
   geolocator: ^13.0.2
-  permission_handler: ^11.3.1
-  dropdown_search: 6.0.1
-  dart_date: ^1.1.1
-  flutter_native_splash: ^2.2.17
+  dropdown_search: ^6.0.2
+  dart_date: ^1.4.0
   flutter_easyloading: 3.0.5
-  uuid: ^4.3.3
-  flutter_svg: ^2.0.9
-  mobx: ^2.2.0
-  flutter_mobx: ^2.2.1+1
-  flutter_modular: ^6.0.4+1
+  uuid: ^4.5.1
+  flutter_svg: ^2.0.17
+  mobx: ^2.5.0
+  flutter_mobx: ^2.3.0
+  flutter_modular: ^6.3.4
   geocoding: ^3.0.0
-  rename: ^3.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  mobx_codegen: ^2.6.1
-  build_runner: ^2.4.6
+  mobx_codegen: ^2.7.0
+  build_runner: ^2.4.15
 
 flutter_icons:
   android: "launcher_icon"
