--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.2 <3.0.0'
+  sdk: ^3.7.2
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -38,7 +38,6 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  #cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.15
   http: ^0.13.5
   provider: ^6.0.4
@@ -52,36 +51,33 @@ dependencies:
   flutter_switch: ^0.3.2
   platform_info: ^3.2.0
   group_button: ^5.2.2
-  intl: ^0.18.1
+  intl: ^0.19.0
   google_maps_flutter: ^2.2.3
   google_maps_flutter_web: ^0.4.0+5
   url_strategy: ^0.2.0
   adaptive_action_sheet: ^2.0.2  
-  location: ^4.4.0
+  location: ^5.0.3
   fluttertoast: ^8.1.2
   url_launcher: ^6.1.7
   persistent_bottom_nav_bar: ^5.0.2
   geocoder2: ^1.4.0
-  dropdown_search: 5.0.2  
+  dropdown_search: ^6.0.2 
   dart_date: ^1.1.1
   menu_button: ^1.4.2+1
   flutter_native_splash: ^2.2.17
   flutter_easyloading: 3.0.5
+  webview_flutter: ^4.11.0
 
 dev_dependencies:
-
-  #flutter_launcher_icons: ^0.11.0
-
   flutter_test:
     sdk: flutter
-
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -112,10 +108,10 @@ flutter:
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
+  # https://flutter.dev/to/resolution-aware-images
 
   # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
+  # https://flutter.dev/to/asset-from-package
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
@@ -135,4 +131,4 @@ flutter:
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  # see https://flutter.dev/to/font-from-package
